Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8677

Attached property scope is incorrect

XMLWordPrintable

    • 6633234f5f19899dc54510b2bddb2ae1afd38318

      In the example below, MyQmlObject.value2 is assigned MyQmlObject.value. Should be the value2 property on QtObject

      QtObject {
      property int value2: 8
      MyQmlObject.value: 10
      Namespace.MyQmlObject.value2: 13
      MyQmlObject.onValueChanged: value2 = MyQmlObject.value
      }

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            aakenned Aaron Kennedy
            martjone Martin Jones (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes