Run signal expressions on attached property objects in correct scope

QTBUG-8677