tests/auto/declarative/qdeclarativeecmascript/tst_qdeclarativeecmascript.cpp
@@ -123,6 +123,7 @@ private slots:
     void multiEngineObject();
     void deletedObject();
     void scriptScope();
+    void attachedPropertyScope();
 
     void bug1();
 
@@ -1691,6 +1692,26 @@ void tst_qdeclarativeecmascript::scriptScope()
 
         delete object;
     }
+}
+
+void tst_qdeclarativeecmascript::attachedPropertyScope()
+{
+    QDeclarativeComponent component(&engine, TEST_FILE("attachedPropertyScope.qml"));
+
+    QObject *object = component.create();
+    QVERIFY(object != 0);
+
+    MyQmlAttachedObject *attached = 
+        qobject_cast<MyQmlAttachedObject *>(qmlAttachedPropertiesObject<MyQmlObject>(object));
+    QVERIFY(attached != 0);
+
+    QCOMPARE(object->property("value2").toInt(), 0);
+
+    attached->emitMySignal();
+
+    QCOMPARE(object->property("value2").toInt(), 9);
+
+    delete object;
 }
 
 QTEST_MAIN(tst_qdeclarativeecmascript)
